--- a/选项卡菜单/TabMenu/css/TabMenu.css
+++ b/选项卡菜单/TabMenu/css/TabMenu.css
@@ -2,18 +2,20 @@
     width: 100%;
     height: 100%;
     position: relative;
-    border: 1px solid gray;
-    background-color: azure;
-    padding-top: 70px;
-    padding-bottom: 30px;
+    border: 2px solid #808080;
+    background-color: #fff;
+    padding-top: 100px;
+    padding-bottom: 25px;
     box-sizing: border-box;
+    font-size: 14px;
 }
 
 .vis_top {
     width: 100%;
-    height: 70px;
+    height: 100px;
     position: absolute;
-    background-color: aquamarine;
+    background: url(/images/background-top.png) repeat-x;
+    background-size: contain;
     top: 0px;
 }
 
@@ -21,7 +23,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: beige;
+    /*background-color: beige;*/
     border-top: 1px solid gray;
     border-bottom: 1px solid gray;
     box-sizing: border-box;
@@ -29,20 +31,68 @@
 
 .vis_bottom {
     width: 100%;
-    height: 30px;
+    height: 25px;
     position: absolute;
-    background-color: lightskyblue;
+    /*background-color: lightskyblue;*/
+    background: url(/images/background-bottom.png) repeat-x;
+    background-size: contain;
     bottom: 0px;
 }
 
-.vis_tabButton {
-    width: 50px;
-    height: 21px;
+.vis_tabHeader {
+    width: 100%;
+    /*height: 20px;*/
+    /*background-color: #f7f7f7;*/
+}
+
+    .vis_tabHeader ul {
+        /*background-color: #f7f7f7;*/
+        width: 100%;
+        height: 30px;
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+        display: flex;
+    }
+
+        .vis_tabHeader ul li {
+            width: 50px;
+            /*height: 22px;*/
+            text-align: center;
+            margin: 5px 0 0 5px;
+            border: 1px solid transparent;
+            border-radius: 5px 5px 0 0;
+            cursor: default;
+            padding: 2px 2px 0 2px;
+        }
+
+            .vis_tabHeader ul li.selected {
+                box-shadow: 0px -1px 1px #c1c1c1;
+                border-top: 1px solid transparent;
+                border-right: 1px solid #c1c1c1;
+                border-bottom: 1px solid white !important;
+                border-left: 1px solid #c1c1c1;
+                background-color: #fff;
+            }
+
+            .vis_tabHeader ul li:hover {
+                box-shadow: 0px -1px 2px #c1c1c1;
+                border-top: 1px solid transparent;
+                border-right: 1px solid #c1c1c1;
+                border-bottom: 1px solid #c1c1c1;
+                border-left: 1px solid #c1c1c1;
+            }
+
+.vis_tabMenuList {
+    width: 100%;
+    height: 70px;
+    margin: -1px 0 0 0;
 }
 
 .vis_tabMenu {
     width: 100%;
-    height: 50px;
-    background-color: brown;
-    display: block;
+    height: 100%;
+    border-top: 1px solid #c1c1c1;
+    cursor: default;
+    display: none;
 }
