--- a/选项卡菜单/TabMenu/css/tabMenu.css
+++ b/选项卡菜单/TabMenu/css/tabMenu.css
@@ -116,13 +116,36 @@
     background-size: auto 70px;
     /*border-bottom: 1px solid #c0c0c0;*/
     font-size: 40px;
+    position: relative;
 }
 
 .vis_scroll {
     width: 20px;
-    height: 100%;
-    float: left;
-    background-color: red;
+    height: 66px;
+    /*float: left;*/
+    /* background-color: red; */
+    border-radius: 5px;
+    margin: 3px;
+    background: url(/images/background3.png) repeat-x;
+    background-size: contain;
+    box-shadow: 0px 0px 1px #000000;
+    position: absolute;
+    top: 0;
+}
+
+    .vis_scroll i {
+        height: 15px;
+        width: 15px;
+        display: block;
+        margin: 24px 0 0 3px;
+    }
+
+.vis_scroll_left {
+    left: 0;
+}
+
+.vis_scroll_right {
+    right: 0;
 }
 
 #hideMenu {
@@ -154,4 +177,13 @@
 
 .svg_tuding {
     background-image: url(/svgs/tuding.svg);
+}
+
+.svg_jiantouxiangzuo {
+    background-image: url(/svgs/jiantouxiangzuo.svg);
+}
+
+.svg_jiantouxiangyou {
+    background-image: url(/svgs/jiantouxiangzuo.svg);
+    transform: scaleX(-1);
 }
