--- a/选项卡菜单/TabMenu/css/tabMenu.css
+++ b/选项卡菜单/TabMenu/css/tabMenu.css
@@ -5,7 +5,7 @@
     /*border: 2px solid #808080;*/
     border: 2px solid #b7b7b7;
     background-color: #e4e4e4;
-    padding-top: 103px;
+    padding-top: 133px;
     padding-bottom: 23px;
     box-sizing: border-box;
     font-size: 14px;
@@ -73,6 +73,7 @@
             border-radius: 5px 5px 0 0;
             cursor: default;
             padding: 2px 2px 0 2px;
+            z-index: 1;
         }
 
             .vis_tabHeader ul li.selected {
@@ -108,12 +109,12 @@
 .vis_tabMenu {
     width: 100%;
     /*height: 100%;*/
-    height: 70px;
+    height: 100px;
     border-top: 1px solid #c1c1c1;
     cursor: default;
     display: none;
     background: url(/images/menu.png) no-repeat;
-    background-size: auto 70px;
+    background-size: auto 100px;
     /*border-bottom: 1px solid #c0c0c0;*/
     font-size: 40px;
     position: relative;
@@ -122,13 +123,13 @@
 
 .vis_scroll {
     width: 16px;
-    height: 66px;
+    height: 94px;
     /*float: left;*/
     /* background-color: red; */
     border-radius: 5px;
     margin: 3px;
     background: url(/images/background3.png) repeat-x;
-    background-size: contain;
+    background-size: cover;
     box-shadow: 0px 0px 1px #000000;
     position: absolute;
     top: 0;
@@ -138,7 +139,7 @@
         height: 13px;
         width: 13px;
         display: block;
-        margin: 24px 0 0 1px;
+        margin: 39px 0 0 1px;
     }
 
 .vis_scroll_left {
